--- a/latex/implementation.tex
+++ b/latex/implementation.tex
@@ -68,7 +68,7 @@ window.angular.module('scegratooApp')
       })
   })
   \end{minted}
-  \caption{This is how \gls{Roundtrip3D} is initialized. It also shows how the routing is defined.}
+  \caption{This is how \gls{SceGraToo} is initialized. It also shows how the routing is defined.}
   \label{list:bootstrap}
 \end{listing}
 
@@ -148,7 +148,7 @@ retrieved from the server.
 \subsubsection{react}
 \label{react}
 
-React is utilized by \gls{Roundtrip3D} to render the tree-view that gives a more
+React is utilized by \gls{SceGraToo} to render the tree-view that gives a more
 structured view of the scene-graph than the rendered scene does.
 
 React works by creating components and nesting them. Listing
