--- a/latex/prelude.tex
+++ b/latex/prelude.tex
@@ -35,7 +35,7 @@ This can be achieved by adjusting \emph{translate}, \emph{rotate} and
 \emph{scale} properties to arrange \gls{3D} objects. To exacerbate this problem
 further, the orientation the \gls{3D} artists chose for its object may be unknown, if
 % TODO: so what now? convention or no convention?
-their is no convention for \gls{3D} modeling. \sout{Usually their is a convention
+there is no convention for \gls{3D} modeling. \sout{Usually their is a convention
 about origin of coordinate system, scaling and orientation} (no there isn't, still
 not sure what to put here). However, we cannot assume that these conventions are
 always met. The main problem is, that \gls{3D} transformations, such as translation,
@@ -91,8 +91,8 @@ following list explains the work-flow using just a text editor.
 
 Tools like Maya or Blender could also be used for this, but their import
 and export filter discard important meta-data that is necessary for the
-round-trip transformation. This is what \gls{Roundtrip3D} is meant to be. \gls{Roundtrip3D} addresses both of these issues. It allows for loading the root \gls{X3D} file and changing all transformations, containing the inline nodes,
-using mouse interactions. For fine grained control \gls{Roundtrip3D} also
+round-trip transformation. This is what \gls{SceGraToo} is meant to be. \gls{SceGraToo} addresses both of these issues. It allows for loading the root \gls{X3D} file and changing all transformations, containing the inline nodes,
+using mouse interactions. For fine grained control \gls{SceGraToo} also
 contains a tree view that allows the user to input exact attributes for
 translations, rotations and scale.
 
