--- a/latex/seminararbeit.tex
+++ b/latex/seminararbeit.tex
@@ -46,7 +46,7 @@
 % tables
 \usepackage{ tabularx }
 % quates
-\usepackage[babel,german=quotes]{csquotes}
+% \usepackage[babel,german=quotes]{csquotes}
 % colors
 \usepackage[usenames, dvipsnames]{xcolor}
 % subscript
