--- a/latex/concept.tex
+++ b/latex/concept.tex
@@ -5,19 +5,19 @@
 
 % TODO: skizze wie dom rendering funktioniert oder auch nicht, da es ziemlich uninteressant ist
 
-In the following sections the initial design concept of \gls{Roundtrip3D} is illustrated.
+In the following sections the initial design concept of \gls{SceGraToo} is illustrated.
 
 \subsection{Server}
 \label{server}
 
 \subsubsection{Node.js}
 \begin{quote}
-  Node.js is a platform built on Chrome's JavaScript runtime for easily building fast, scalable network applications. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient, perfect for data-intensive real-time applications that run across distributed devices. \cite{nodejs}
+  ``Node.js is a platform built on Chrome's JavaScript runtime for easily building fast, scalable network applications. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient, perfect for data-intensive real-time applications that run across distributed devices.'' \cite{nodejs}
 \end{quote}
 
 Node is used because it is inherently easy writing small servers with it, and
 SceGraToo's server is not going to be complex. \footnote{Complex servers can be
-written in nodejs as well, it is just not encourages, since most people tend to
+written in nodejs as well, it is just not encouraged, since most people tend to
 refactor there infrastructure into micro services.}
 
 Listing \ref{list:nodejs} shows a server that is looking up a user from the database and returning it as \gls{JSON} to the browser.
@@ -45,7 +45,7 @@ http.createServer((request, response) => {
 \subsubsection{Koa}
 \label{par:Koa}
 \begin{quote}
-  Koa is a new web framework designed by the team behind Express, which aims to be a smaller, more expressive, and more robust foundation for web applications and APIs. Through leveraging generators Koa allows you to ditch callbacks and greatly increase error-handling. Koa does not bundle any middleware within core, and provides an elegant suite of methods that make writing servers fast and enjoyable. \cite{koajs}
+  ``Koa is a new web framework designed by the team behind Express, which aims to be a smaller, more expressive, and more robust foundation for web applications and APIs. Through leveraging generators Koa allows you to ditch callbacks and greatly increase error-handling. Koa does not bundle any middleware within core, and provides an elegant suite of methods that make writing servers fast and enjoyable.'' \cite{koajs}
 \end{quote}
 
 Koa is used to make writing the server and using asynchronouse functions in request handlers even simpler and clearer.
