--- a/latex/seminararbeit.tex
+++ b/latex/seminararbeit.tex
@@ -176,17 +176,12 @@ Date: & \today \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% <Antiplagiatserklärung> %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \thispagestyle{empty}
 \vspace*{100pt}
-I, \textbf{\myauthor}, declare that I have read and understood
-the material exemplifying and explaining cases of plagiarism, and that my paper contains no plagiarized
-material and is solely my own work. I am aware of the fact that should my paper be found to
-contain plagiarized material or to have been written in part or whole by someone else, this will
-entail serious consequences. These include the following:
-1. The reason for my failure will be recorded by the department.
-2. I will not be given credit for the course.
-3. The Honor Board may review my paper and suggest additional sanctions, including
-expulsion.
-Furthermore, I am aware that submitting the same or a revised paper in two separate courses without
-the instructors' explicit consent will result in similar consequences.\cite{Antiplagiatserklrung}
+\section*{Eidesstattliche Erklärung}
+Ich, \textbf{\myauthor}, versichere, dass ich diese Arbeit selbstständig verfasst und keine anderen Hilfsmittel als
+die angegebenen benutzt habe. Die Stellen der Arbeit, die anderen Werken dem Wortlaut oder
+dem Sinn nach entnommen sind, habe ich in jedem einzelnen Fall unter Angabe der Quelle
+als Entlehnung kenntlich gemacht. Diese Versicherung bezieht sich auch auf die bildlichen
+Darstellungen.
 \vspace*{50pt}
 
 Freiberg, \today \hspace{2cm} \underline{\phantom{Platz für die Unterschrift}}
