reverse some acronyms

--- a/latex/glossary.tex
+++ b/latex/glossary.tex
@@ -30,7 +30,7 @@
   name=WebGL,
   description={A cross-platform, royalty-free web standard for a low-level 3D graphics API based on OpenGL ES 2.0. \cite{webgl}}
 }
-\newacronym{3D}{3D}{3 Dimensional}
+\newacronym{3D}{3D}{3 dimensional}
 \newacronym{DAG}{DAG}{Directed Acyclic Graph}
 \newacronym{XML}{XML}{Extensible Markup Language}
 \newacronym{VRML}{VRML}{Virtual Reality Modeling Language}
