--- a/latex/prelude.tex
+++ b/latex/prelude.tex
@@ -3,16 +3,16 @@
 \section{Introduction}
 \label{sec:Prelude}
 
-The goal of the thesis is to create a \gls{3D} editor, using web technologies,
+The goal of the thesis is to create a editor for \acr{3D} scenes, using web technologies,
 which enables its users to post-process \gls{X3D} scenes. These scenes are the
 product of a tool that was implemented as part of the DFG research
-project \gls{Roundtrip3D} \cite{Jung:2015:SDA:2802768.2802837}.
+project \gls{R3D} \cite{Jung:2015:SDA:2802768.2802837}.
 % The scene are automatically derived from software models \ldots{}
 \subsection{Motivation}\label{motivation}
 
-As part of the Roundtrip3D project, a round-trip framework (hereafter
-referred to as \emph{R3D}) was developed. This framework also includes a
-graphical editor for SSIML models, to describe \gls{3D} applications. Then
+As part of the \gls{R3D} project, a round-trip framework
+ was developed.This framework also includes a
+graphical editor for \acr{SSIML} models, to describe \gls{3D} applications. Then
 \gls{R3D} can be used to generate boilerplate code for multiple programming
 languages, such as JavaScript, Java or C++, and an \gls{X3D} file describing
 the scene. The \gls{X3D} file may contain references to other \gls{X3D} files
